Add myself in footer, fix modal text

--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
         <div class="p-6 space-y-6">
           <p class="text-base leading-relaxed text-gray-600 dark:text-gray-400">
             Este sitio web lo he diseñado para practicar mis habilidades de programación y diseño, no tiene fines
-            comerciales en absoluto.
+            comerciales.
+            <br>
+            Mi intención fue simular un rediseño del sitio web mencionado para practicar mis habilidades.
           </p>
           <p class="text-base leading-relaxed text-gray-600 dark:text-gray-400">
-            Este sitio web fue inspirado en el sitio web <span class="font-bold">saveafox.org</span>
-            Mi intención fue simular un rediseño del sitio web mencionado para practicar
+            Este sitio web fue inspirado en el sitio web de <a href="https://www.saveafox.org" target="_blank"
+              class="font-bold hover:text-amber-500 transition-colors">saveafox.org</a>
           </p>
         </div>
       </div>
@@ -538,8 +540,8 @@
       </div>
       <div class="m-auto flex h-auto max-w-[1550px] flex-col items-center justify-between gap-6 pb-4">
         <div class="flex flex-col justify-center order-2">
-          <p class="text-base text-midnight dark:text-gray-300">
-            © All Right Reserved 2022 - SaveAFox Organization.
+          <p class="text-base text-gray-600 dark:text-gray-300">
+            Made by <a class="font-medium" href="https://github.com/AlloyFox"> AloyDev</a> with ❤️
           </p>
         </div>
         <div class="flex flex-row items-center order-1 gap-4">
@@ -552,7 +554,7 @@
             <img class="w-6" src="/public/assets/icons/facebook.png" alt="" />
           </div>
           <div
-            class="items-center justify-center flex-grow-0 flex-shrink-0 p-3 bg-white rounded-full shadow-lg dark:bg-gray-900">
+            class="items-center justify-center flex-grow-0 flex-shrink-0 p-3 bg-white rounded-full shadow-lg dark:bg-gray-900">1
             <img class="w-6" src="/public/assets/icons/twitter.png" alt="" />
           </div>
           <div
