--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <nav
       class="relative z-10 bg-white flex items-center justify-between w-full h-24 px-8 desktop-lg:px-0 transition-colors duration-300 dark:bg-darkcolor">
       <figure class="w-48 h-auto dark:hidden transition-all duration-300 desktop:w-64">
-        <img class="w-full h-auto object-cover" src="/public/assets/img/logo-inline.webp" alt="">
+        <img loading="lazy" class="w-full h-auto object-cover" src="/public/assets/img/logo-inline.webp" alt="">
       </figure>
       <figure class="w-48 h-auto hidden dark:block transition-all duration-300 desktop:w-64">
-        <img class="w-full h-auto object-cover" src="/public/assets/img/logo-inlineDark.webp" alt="">
+        <img loading="lazy" class="w-full h-auto object-cover" src="/public/assets/img/logo-inlineDark.webp" alt="">
       </figure>
       <!-- MENU DESKTOP TABLET -->
       <div
@@ -170,7 +170,7 @@
         <div class="flex items-center gap-6 tablet:flex-row">
           <div
             class="flex items-center justify-center flex-grow-0 flex-shrink-0 w-16 h-16 transition-colors duration-300 border-2 rounded-full border-gray-200 dark:border-foxBrown dark:border-opacity-90">
-            <img loading="lazy" class="w-8 p-0 m-0" src="/public/assets/icons/heart.png" alt="icon light mode" />
+            <img loading="lazy" class="w-8 p-0 m-0" src="/public/assets/icons/heart.webp" alt="icon light mode" />
           </div>
           <div class="dark:text-gray-300 tablet:text-center desktop:text-left transition-colors duration-300">
             <p class="text-xl font-bold">900+</p>
@@ -182,7 +182,7 @@
         <div class="flex items-center gap-6 tablet:flex-row">
           <div
             class="flex items-center justify-center flex-grow-0 flex-shrink-0 w-16 h-16 transition-colors duration-300 border-2 rounded-full border-gray-200 dark:border-foxBrown dark:border-opacity-90">
-            <img loading="lazy" class="w-8 p-0 m-0" src="/public/assets/icons/pin.png" alt="icon light mode" />
+            <img loading="lazy" class="w-8 p-0 m-0" src="/public/assets/icons/pin.webp" alt="icon pin" />
           </div>
           <div class="dark:text-gray-300 tablet:text-center desktop:text-left transition-colors duration-300">
             <p class="text-xl font-bold">160+</p>
@@ -194,7 +194,7 @@
         <div class="flex items-center gap-6 tablet:flex-row">
           <div
             class="flex items-center justify-center flex-grow-0 flex-shrink-0 w-16 h-16 transition-colors duration-300 border-2 rounded-full border-gray-200 dark:border-foxBrown dark:border-opacity-90">
-            <img loading="lazy" class="w-8 p-0 m-0" src="/public/assets/icons/user.png" alt="icon light mode" />
+            <img loading="lazy" class="w-8 p-0 m-0" src="/public/assets/icons/user.webp" alt="icon user" />
           </div>
           <div class="dark:text-gray-300 tablet:text-center desktop:text-left transition-colors duration-300">
             <p class="text-xl font-bold">30+</p>
@@ -206,7 +206,7 @@
         <div class="flex items-center gap-6 tablet:flex-row">
           <div
             class="flex items-center justify-center flex-grow-0 flex-shrink-0 w-16 h-16 transition-colors duration-300 border-2 rounded-full border-gray-200 dark:border-foxBrown dark:border-opacity-90">
-            <img loading="lazy" class="w-8 p-0 m-0" src="/public/assets/icons/ribbon.png" alt="icon light mode" />
+            <img loading="lazy" class="w-8 p-0 m-0" src="/public/assets/icons/ribbon.webp" alt="icon ribbon" />
           </div>
           <div class="dark:text-gray-300 tablet:text-center desktop:text-left transition-colors duration-300">
             <p class="text-xl font-bold">15+</p>
@@ -363,8 +363,8 @@
         </div>
         <div class="flex flex-col items-center content-between h-auto gap-6 laptop:flex-row desktop:justify-center">
           <div
-            class="flex flex-col h-auto items-center gap-4 px-10 py-10 transition bg-white rounded-xl hover:shadow-lg hover:shadow-gray-200 dark:bg-darkcolor-light dark:bg-opacity-30 dark:hover:shadow-black tablet:w-96 tablet:h-auto tablet:max-h-[30rem]">
-            <img class="w-16" src="/public/assets/icons/heart.webp" alt="icon heart" />
+            class="flex flex-col h-auto items-center gap-4 px-10 py-10 transition bg-white rounded-xl hover:shadow-lg hover:shadow-gray-200 dark:bg-darkcolor-light dark:bg-opacity-30 dark:hover:shadow-[#0b0e0f] tablet:w-96 tablet:h-auto tablet:max-h-[30rem]">
+            <img loading="lazy" class="w-16" src="/public/assets/icons/heart.webp" alt="icon heart" />
             <h3 class="text-2xl font-bold uppercase text-foxBrown dark:text-gray-300">
               Donate
             </h3>
@@ -374,8 +374,8 @@
             </p>
           </div>
           <div
-            class="flex flex-col h-auto items-center gap-4 px-10 py-10 transition bg-white rounded-xl hover:shadow-lg hover:shadow-gray-200 dark:bg-darkcolor-light dark:bg-opacity-30 dark:hover:shadow-black tablet:w-96 tablet:h-auto tablet:max-h-[30rem]">
-            <img class="w-16" src="/public/assets/icons/diamond.svg" alt="icon diamons" />
+            class="flex flex-col h-auto items-center gap-4 px-10 py-10 transition bg-white rounded-xl hover:shadow-lg hover:shadow-gray-200 dark:bg-darkcolor-light dark:bg-opacity-30 dark:hover:shadow-[#0b0e0f] tablet:w-96 tablet:h-auto tablet:max-h-[30rem]">
+            <img loading="lazy" class="w-16" src="/public/assets/icons/diamond.svg" alt="icon diamons" />
             <h3 class="text-2xl font-bold uppercase text-foxBrown dark:text-gray-300">
               Sponsor
             </h3>
@@ -385,8 +385,8 @@
             </p>
           </div>
           <div
-            class="flex flex-col h-auto items-center gap-4 px-10 py-10 transition bg-white rounded-xl hover:shadow-lg hover:shadow-gray-200 dark:bg-darkcolor-light dark:bg-opacity-30 dark:hover:shadow-black tablet:w-96 tablet:h-auto tablet:max-h-[30rem]">
-            <img class="w-14" src="/public/assets/icons/house.webp" alt="icon house" />
+            class="flex flex-col h-auto items-center gap-4 px-10 py-10 transition bg-white rounded-xl hover:shadow-lg hover:shadow-gray-200 dark:bg-darkcolor-light dark:bg-opacity-30 dark:hover:shadow-[#0b0e0f] tablet:w-96 tablet:h-auto tablet:max-h-[30rem]">
+            <img loading="lazy" class="w-14" src="/public/assets/icons/house.webp" alt="icon house" />
             <h3 class="text-2xl font-bold uppercase text-foxBrown dark:text-gray-300">
               Adopt
             </h3>
@@ -401,7 +401,7 @@
     <section class="max-w-screen bg-slate-100 dark:bg-darkcolor">
       <div class="m-auto max-w-[1550px] px-8 pb-28">
         <div class="flex flex-col items-center gap-10 text-center desktop:px-32">
-          <img class="w-16" src="/public/assets/icons/shield.webp" alt="" />
+          <img loading="lazy" class="w-16" src="/public/assets/icons/shield.webp" alt="" />
           <h2 class="text-h2 dark:text-gray-300">Fight to save a fox</h2>
           <p class="text-base text-center text-foxBrown dark:text-gray-300">
             Foxes are suffering at fur farms. But you can help! I encourage
@@ -430,10 +430,11 @@
         class="m-auto flex max-w-[1550px] flex-col items-center py-16 px-8 laptop:flex-row laptop:items-start laptop:justify-center laptop:gap-8">
         <div class="flex flex-col items-start w-full pb-8 laptop:w-1/3">
           <figure class="dark:hidden">
-            <img class="pb-6 w-80 h-auto" src="/public/assets/img/logo-inline.webp" alt="" />
+            <img loading="lazy" class="pb-6 w-80 h-auto" src="/public/assets/img/logo-inline.webp" alt="" />
           </figure>
           <figure class="hidden dark:block">
-            <img class="pb-6 w-80 h-auto" src="/public/assets/img/logo-inlineDark.webp" alt="logo footer" />
+            <img loading="lazy" class="pb-6 w-80 h-auto" src="/public/assets/img/logo-inlineDark.webp"
+              alt="logo footer" />
           </figure>
           <p class="w-full text-base text-left text-foxBrown dark:text-gray-300">
             We are a non-profit organization faithfully dedicated to rescuing
@@ -494,19 +495,19 @@
         <div class="flex flex-row items-center order-1 gap-4">
           <div
             class="items-center justify-center flex-grow-0 flex-shrink-0 p-4 bg-white rounded-full shadow-lg dark:bg-darkcolor-light">
-            <img class="w-6" src="/public/assets/icons/linkedin.webp" alt="" />
+            <img loading="lazy" class="w-6" src="/public/assets/icons/linkedin.webp" alt="" />
           </div>
           <div
             class="items-center justify-center flex-grow-0 flex-shrink-0 p-4 bg-white rounded-full shadow-lg dark:bg-darkcolor-light">
-            <img class="w-6" src="/public/assets/icons/facebook.png" alt="" />
+            <img loading="lazy" class="w-6" src="/public/assets/icons/facebook.webp" alt="" />
           </div>
           <div
             class="items-center justify-center flex-grow-0 flex-shrink-0 p-4 bg-white rounded-full shadow-lg dark:bg-darkcolor-light">
-            <img class="w-6" src="/public/assets/icons/twitter.png" alt="" />
+            <img loading="lazy" class="w-6" src="/public/assets/icons/twitter.webp" alt="" />
           </div>
           <div
             class="items-center justify-center flex-grow-0 flex-shrink-0 p-4 bg-white rounded-full shadow-lg dark:bg-darkcolor-light">
-            <img class="w-6" src="/public/assets/icons/instagram.png" alt="" />
+            <img loading="lazy" class="w-6" src="/public/assets/icons/instagram.webp" alt="" />
           </div>
         </div>
       </div>
