minor changes windows "Designed with Tailwind"

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       Designed with Tailwind
       <div class="flex items-center w-full">
         <img class="w-full dark:hidden" src="/public/assets/img/tailwindcss-logotype.svg" alt="">
-        <img class="w-full hidden dark:block" src="/public/assets/img/tailwindcss-logotype-white.svg" alt="">
+        <img class="w-32 laptop:w-full hidden dark:block" src="/public/assets/img/tailwindcss-logotype-white.svg"
+          alt="">
       </div>
     </a>
   </div>
