delete innecesary files

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
               our puppies.
             </p>
           </div>
-          <img loading="lazy" class="object-cover w-full rounded-xl laptop:w-1/2" src="/public/assets/img/img02.webp"
+          <img loading="lazy" class="object-cover w-full rounded-xl laptop:w-1/2" src="/public/assets/img/rescue.webp"
             alt="" />
         </div>
       </div>
@@ -360,7 +360,7 @@
             </p>
           </div>
           <img loading="lazy" class="object-cover w-full rounded-xl laptop:order-1 laptop:w-1/2"
-            src="/public/assets/img/img_01.webp" alt="" />
+            src="/public/assets/img/finnegan.webp" alt="" />
         </div>
       </div>
     </section>
@@ -388,7 +388,7 @@
           </div>
           <div
             class="flex flex-col h-auto items-center gap-4 px-10 py-10 transition bg-white rounded-xl hover:shadow-lg hover:shadow-gray-200 dark:bg-darkcolor-light dark:bg-opacity-30 dark:hover:shadow-[#0b0e0f] tablet:w-96 tablet:h-auto tablet:max-h-[30rem]">
-            <img loading="lazy" class="w-16" src="/public/assets/icons/diamond.svg" alt="icon diamons" />
+            <img loading="lazy" class="w-16" src="/public/assets/icons/diamond.webp" alt="icon diamons" />
             <h3 class="text-2xl font-bold uppercase text-foxColor dark:text-gray-300">
               Sponsor
             </h3>
