--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       <div class="m-auto flex h-auto max-w-[1550px] flex-col items-center justify-between gap-6 pb-4">
         <div class="flex flex-col justify-center order-2">
           <p class="text-base text-foxColor dark:text-gray-300">
-            Made with ❤️ by <a class="font-medium" href="https://github.com/AlloyFox">AloyDev</a>
+            Made with ❤️ by <a class="font-medium" href="https://github.com/A1oyDev">AloyDev</a>
           </p>
         </div>
         <div class="flex flex-row items-center order-1 gap-4">
