--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       Designed with Tailwind
       <div class="flex items-center w-full">
         <img class="w-full dark:hidden" src="/public/assets/img/tailwindcss-logotype.svg" alt="">
-        <img class="w-32 laptop:w-full hidden dark:block" src="/public/assets/img/tailwindcss-logotype-white.svg"
+        <img class="hidden dark:block" src="/public/assets/img/tailwindcss-logotype-white.svg"
           alt="">
       </div>
     </a>
