fix size of floating window tailwind on light mode

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       href="https://tailwindcss.com" target="_blank">
       Designed with Tailwind
       <div class="flex items-center w-full">
-        <img class="w-full dark:hidden" src="/public/assets/img/tailwindcss-logotype.svg" alt="">
+        <img class="dark:hidden" src="/public/assets/img/tailwindcss-logotype.svg" alt="">
         <img class="hidden dark:block" src="/public/assets/img/tailwindcss-logotype-white.svg"
           alt="">
       </div>
