--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
 </head>
 
 <body id="body" class="w-screen z-10 transition-colors duration-300 bg-white dark:bg-darkcolor">
-  <div id="modal" class="z-50 fixed right-0 bottom-0 pr-8 pb-4 w-fit h-fit laptop:pr-16 laptop:pb-8">
+  <div id="modal" class="z-50 fixed right-0 bottom-0 pr-8 pb-10 w-fit h-fit laptop:pr-16 laptop:pb-8">
     <a class="flex flex-col justify-center items-center px-4 py-4 gap-4 text-sm font-base laptop:text-sm laptop:py-4 laptop:px-4 dark:text-gray-400 bg-gray-50 border-[1px] border-gray-300 dark:border-darkcolor-light rounded-lg shadow dark:bg-darkcolor hover:scale-[1.15] duration-150 subpixel-antialiased transform-gpu"
       href="https://tailwindcss.com" target="_blank">
       Designed with Tailwind
       <div class="flex items-center w-full">
         <img class="dark:hidden" src="/public/assets/img/tailwindcss-logotype.svg" alt="">
-        <img class="hidden dark:block" src="/public/assets/img/tailwindcss-logotype-white.svg"
-          alt="">
+        <img class="hidden dark:block" src="/public/assets/img/tailwindcss-logotype-white.svg" alt="">
       </div>
     </a>
   </div>
@@ -487,7 +486,7 @@
       <div class="m-auto flex h-auto max-w-[1550px] flex-col items-center justify-between gap-6 pb-4">
         <div class="flex flex-col justify-center order-2">
           <p class="text-base text-foxColor dark:text-gray-300">
-            Made with ❤️ by <a class="font-medium" href="https://github.com/AloyDevel">AloyDev</a>
+            Made with ❤️ by <a class="font-medium" href="https://github.com/FreddyPuoy">Freddy Puoy</a>
           </p>
         </div>
         <div class="flex flex-row items-center order-1 gap-4">
